[package]
name = "ebpf_http_trace"
version = "0.1.0"
authors = ["vi_mi <fenil.jain2018@vitstudent.ac.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2.1"
redbpf-probes = "1.3.0"
redbpf-macros = "1.3.0"

[features]
default = []
probes = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "ebpf_http_trace"
path = "src/ebpf_http_trace/main.rs"
required-features = ["probes"]
